[project]
name = "llms-video-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "regex>=2026.6.28",
    "tiktoken>=0.13.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
    "transformers>=4.17.0",
]
